CompassDial: fix cutoff dial image on some devices.

--- a/src/components/CompassDial.css
+++ b/src/components/CompassDial.css
@@ -9,15 +9,20 @@
 }
 
 .compass-dial {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
   position: relative;
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
-  background-image: url('../img/compass_v01.svg');
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: 100%;
+}
+
+.compass-dial-background {
+  width: 100%;
 }
 
 .compass-dial-emoji {
