--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -16,6 +16,7 @@ body {
   position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   /* Background */
   background-attachment: fixed;
